# examples

./: .gitignore  README.md  requirements-local.txt  requirements.txt
assistant/: README.md  text.py  toolcall.py  voice.py
assistant/data/: qa_47.json  qa_pairs.json  qa_pairs_jp.json  qa_pairs_zh.json  qa_questions_with_predicted_answers.json  ques.json.json  tools.json
assistant/tools/: gpio.py  vision.py
community/: Astra-Application-Challenge.md  README.md
community/astra-application-challenge/: README.md
embeddings/: README.md  minilm.py  multi_lingual.py  multilingual.py
gst-udp-app/: README.md  meson.build
gst-udp-app/src/: gst_udp.cpp  gst_udp.h  options.h
gstreamer/gst-pipeline/: pyz_builder.py
gstreamer/gst-pipeline/examples/: infer.py  infer_camera.py  infer_rtsp.py  infer_video.py
gstreamer/gst-pipeline/gst/: pipeline.py  validator.py
gstreamer/gst-pipeline/utils/: camera.py  user_input.py
gstreamer/gst-udp-app/: .gitignore
gstreamer/gst-udp-app/src/: gst_udp_utils.cpp  gst_udp_utils.h  main.cpp  meson.build
gstreamer/gst-udp-app/utils/: README.md  udp_receive.py
llm/: deepseek.py  gemma.py  qwen.py
speech-to-text/: live_captions.py  pipeline.py  transcribe.py
speech_to_text/: moonshine.py  pipeline.py
speech_to_text/utils/: audio_manager.py
text-to-speech/: piper.py
text_to_speech/: piper.py
utils/: audio_manager.py  models.py  photo.py  websockets.py
vision/: body_pose.py  image_class.py  index.html  object_detect.py  pipeline.py  pipeline_poll.py  synap_cli_od.py
voice_assistant/: main.py
